--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -31,7 +31,13 @@
                     gap: 10px;
                     margin-top: 30px;
 
-                    // .link-social {}
+                    .link-social {
+                        transition: 0.3s ease;
+
+                        &:hover {
+                            opacity: 0.6;
+                        }
+                    }
 
                     @media (min-width: 992px) {
                         justify-content: flex-end;
