--- a/src/scss/utils/_general.scss
+++ b/src/scss/utils/_general.scss
@@ -78,8 +78,16 @@ body {
     padding-bottom: 20px;
 }
 
+.mb-10 {
+    margin-bottom: 10px;
+}
+
 .mb-15 {
     margin-bottom: 15px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
 }
 
 .gap-10 {
