--- a/src/scss/utils/_swiper.scss
+++ b/src/scss/utils/_swiper.scss
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
 [ swiper ]*/
 
-/* swiperPartners */
+/* swiperClients */
 
-.swiperPartners {
+.swiperClients {
 
     .swiper-wrapper {
         -webkit-transition-timing-function: linear !important;
@@ -34,5 +34,34 @@
 
     .swiper-wrapper {
         margin-bottom: 28px;
+    }
+}
+
+/* swiperPartners */
+
+.swiperPartners {
+
+    .swiper-wrapper {
+        -webkit-transition-timing-function: linear !important;
+        transition-timing-function: linear !important;
+    }
+
+    .swiper-slide {
+        width: auto;
+    }
+
+    .swiper-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 216px;
+        height: 120px;
+        border-radius: var(--bs-border-radius);
+        margin: 0 2px;
+        background-color: var(--theme-blue-light);
+        
+        @media (min-width: 992px) {
+            margin: 0 10px;
+        }
     }
 }
