add animation button

--- a/src/html/partials/card-project.html
+++ b/src/html/partials/card-project.html
@@ -54,8 +54,25 @@
             </div>
         </div>
         <div class="card-btn-wrapper">
-            <a href="#" class="btn btn-outline-black btn-m w-100">
-                <span>Подробнее</span>
+            <a href="#" class="btn btn-outline-black btn-l btn-animated w-100">
+                <div class="animated-content">
+                    <div class="animated-content__default">
+                        <span>Подробнее</span>
+                        <span>
+                            <svg width="14" height="14">
+                                <use xlink:href="img/sprite.svg#btn-arrow-up"></use>
+                            </svg>
+                        </span>
+                    </div>
+                    <div class="animated-content__hidden">
+                        <span>Подробнее</span>
+                        <span>
+                            <svg width="14" height="14">
+                                <use xlink:href="img/sprite.svg#btn-arrow-down"></use>
+                            </svg>
+                        </span>
+                    </div>
+                </div>
             </a>
         </div>
     </div>
