--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -50,13 +50,22 @@
                             <form action="#">
                                 <div class="row row-cols-1 row-cols-lg-3 gy-4 gx-2">
                                     <div class="col">
-                                        <input type="text" class="form-control input-m" placeholder="Ваше имя">
+                                        <input type="text" class="form-control input-l" placeholder="Ваше имя">
                                     </div>
                                     <div class="col">
-                                        <input type="tel" class="form-control input-m" placeholder="+7 (___) ___-__-__">
+                                        <input type="tel" class="form-control input-l" placeholder="+7 (___) ___-__-__">
                                     </div>
                                     <div class="col">
-                                        <button type="submit" class="btn btn-secondary btn-m w-100">Отправить</button>
+                                        <button type="submit" class="btn btn-secondary btn-l btn-animated w-100">
+                                            <div class="animated-content">
+                                                <div class="animated-content__default">
+                                                    <span>Отправить</span>
+                                                </div>
+                                                <div class="animated-content__hidden">
+                                                    <span>Отправить</span>
+                                                </div>
+                                            </div>
+                                        </button>
                                     </div>
                                 </div>
                             </form>
