--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -33,16 +33,35 @@
                     </li>
                 </ul>
                 <div class="btn-box">
-                    <a href="tel:+74951595901" class="btn btn-outline-black btn-m">
-                        <span>+7 495 159-59-01</span>
+                    <a href="tel:+74951595901" class="btn btn-outline-black btn-m btn-animated">
+                        <div class="animated-content">
+                            <div class="animated-content__default">
+                                <span>+7 495 159-59-01</span>
+                            </div>
+                            <div class="animated-content__hidden">
+                                <span>+7 495 159-59-01</span>
+                            </div>
+                        </div>
                     </a>
-                    <button type="button" class="btn btn-primary btn-m">
-                        <span>Связаться</span>
-                        <span>
-                            <svg width="14" height="14">
-                                <use xlink:href="img/sprite.svg#btn-arrow-up"/>
-                            </svg>
-                        </span>
+                    <button type="button" class="btn btn-primary btn-m btn-animated">
+                        <div class="animated-content">
+                            <div class="animated-content__default">
+                                <span>Связаться</span>
+                                <span>
+                                    <svg width="14" height="14">
+                                        <use xlink:href="img/sprite.svg#btn-arrow-up"/>
+                                    </svg>
+                                </span>
+                            </div>
+                            <div class="animated-content__hidden">
+                                <span>Связаться</span>
+                                <span>
+                                    <svg width="14" height="14">
+                                        <use xlink:href="img/sprite.svg#btn-arrow-down"/>
+                                    </svg>
+                                </span>
+                            </div>
+                        </div>
                     </button>
                 </div>
             </nav>
@@ -57,7 +76,7 @@
                             </svg>
                         </span>
                     </button>
-                    <button type="button" class="btn-mobile-toggler btn btn-primary">
+                    <button type="button" class="btn-mobile-toggler btn btn-primary btn-icon-m">
                         <span>
                             <svg width="20" height="16">
                                 <use xlink:href="img/sprite.svg#icon-burger"/>
@@ -69,14 +88,14 @@
 
             <div class="header-row__mobile-navigation">
                 <div class="btn-box">
-                    <button type="button" class="btn btn-outline-black btn-m">
+                    <button type="button" class="btn btn-outline-black btn-icon-m">
                         <span>
                             <svg width="30" height="30">
                                 <use xlink:href="img/sprite.svg#icon-phone"/>
                             </svg>
                         </span>
                     </button>
-                    <button type="button" class="btn-mobile-toggler btn btn-primary">
+                    <button type="button" class="btn-mobile-toggler btn btn-primary btn-icon-m">
                         <span>
                             <svg width="20" height="16">
                                 <use xlink:href="img/sprite.svg#icon-burger"/>
