--- a/src/scss/utils/_buttons.scss
+++ b/src/scss/utils/_buttons.scss
@@ -2,22 +2,53 @@
 [ buttons ]*/
 
 .btn {
+    --bs-btn-font-size: 16px;
+    --bs-btn-font-weight: 400;
+    --bs-btn-line-height: 1;
+    --bs-btn-disabled-opacity: 0.25;
     --bs-btn-focus-box-shadow: none;
+    position: relative;
+    overflow: hidden;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+
+    svg {
+        flex-shrink: 0;
+    }
 }
 
 .btn-m {
     --bs-btn-padding-x: 24px;
-    --bs-btn-padding-y: 12px;
+    --bs-btn-padding-y: 0;
+    min-height: 50px;
+}
+
+.btn-icon-m {
+    --bs-btn-padding-x: 0;
+    --bs-btn-padding-y: 0;
+    width: 50px;
+    height: 50px;
 }
 
 .btn-l {
-    --bs-btn-padding-y: 16px;
+    --bs-btn-padding-x: 32px;
+    --bs-btn-padding-y: 0;
+    min-height: 58px;
 }
 
-.btn-mobile-toggler {
-    --bs-btn-padding-x: 14px;
-    --bs-btn-padding-y: 12px;
+.btn-icon-l {
+    --bs-btn-padding-x: 0;
+    --bs-btn-padding-y: 0;
+    width: 58px;
+    height: 58px;
 }
+
+// .btn-mobile-toggler {
+//     --bs-btn-padding-x: 14px;
+//     --bs-btn-padding-y: 12px;
+// }
 
 .btn-primary {
     --bs-btn-color: var(--theme-white);
@@ -62,4 +93,43 @@
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: var(--theme-black);
     --bs-gradient: none;
+}
+
+.btn-animated {
+    --bs-btn-line-height: 1.5;
+
+    .animated-content {
+        position: relative;
+        overflow: hidden;
+
+        & > * {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+        }
+
+        &__default {
+            transition: transform 1s cubic-bezier(.23, 1, .32, 1);
+        }
+
+        &__hidden {
+            position: absolute;
+            top: 0;
+            transform: translateY(150%);
+            transition: transform 1s cubic-bezier(.23, 1, .32, 1);
+        }
+    }
+
+    &:hover {
+        .animated-content {
+            &__default {
+                transform: translateY(-150%);
+            }
+
+            &__hidden {
+                transform: translateY(0%);
+            }
+        }
+    }
 }
