--- a/src/scss/utils/_forms.scss
+++ b/src/scss/utils/_forms.scss
@@ -1,8 +1,20 @@
 /*------------------------------------------------------------------
 [ forms ]*/
 
-// .form-control {}
+.form-control {
+    box-shadow: none !important;
+
+    &:focus {
+        border-color: var(--theme-black);
+    }
+}
 
 .input-m {
-    padding: 12px 24px;
+    min-height: 50px;
+    padding: 10px 16px;
+}
+
+.input-l {
+    min-height: 58px;
+    padding: 12px 20px;
 }
