--- a/src/scss/utils/_general.scss
+++ b/src/scss/utils/_general.scss
@@ -62,55 +62,59 @@ body {
 }
 
 .p-15 {
-    padding: 15px;
+    padding: 15px !important;
 }
 
 .p-20 {
-    padding: 20px;
+    padding: 20px !important;
 }
 
 .p-40 {
-    padding: 40px;
+    padding: 40px !important;
 }
 
 .py-20 {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
 }
 
 .mb-10 {
-    margin-bottom: 10px;
+    margin-bottom: 10px !important;
 }
 
 .mb-15 {
-    margin-bottom: 15px;
+    margin-bottom: 15px !important;
 }
 
 .mb-20 {
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
+}
+
+.mb-30 {
+    margin-bottom: 30px !important;
 }
 
 .gap-10 {
-    gap: 10px;
+    gap: 10px !important;
 }
 
 @media (min-width: 992px) {
 
     .p-lg-20 {
-        padding: 20px;
+        padding: 20px !important;
     }
 
     .p-lg-40 {
-        padding: 40px;
+        padding: 40px !important;
     }
 
     .py-lg-20 {
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 20px !important;
+        padding-bottom: 20px !important;
     }
 
     .mb-lg-40 {
-        margin-bottom: 40px;
+        margin-bottom: 40px !important;
     }
 }
 
