--- a/src/scss/utils/_swiper.scss
+++ b/src/scss/utils/_swiper.scss
@@ -74,3 +74,20 @@
         padding-bottom: 60px;
     }
 }
+
+/* swiperBlog */
+
+.swiperBlog {
+
+    .swiper-wrapper {
+        padding-bottom: 60px;
+    }
+
+    .swiper-slide {
+        height: auto;
+    }
+
+    .card-blog {
+        height: 100%;
+    }
+}
