--- a/src/scss/utils/_cards.scss
+++ b/src/scss/utils/_cards.scss
@@ -241,3 +241,144 @@
         --bs-card-spacer-x: 30px;
     }
 }
+
+/* card-blog */
+
+.card-blog {
+    --bs-card-spacer-y: 15px;
+    --bs-card-spacer-x: 15px;
+    --bs-card-bg: var(--theme-white);
+    position: relative;
+    overflow: hidden;
+    border: none !important;
+    
+    .card-media {
+        position: relative;
+        overflow: hidden;
+        height: 200px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .card-body {
+        display: flex;
+        flex-direction: column;
+        padding-top: 10px !important;
+    }
+
+    .card-top {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    .card-author {
+        --bs-link-color-rgb: var(--theme-black-rgb);
+        --bs-link-hover-color-rgb: var(--theme-blue-rgb);
+        display: flex;
+        align-items: flex-end;
+        gap: 4px;
+
+        .card-avatar-wrapper {
+            flex-shrink: 0;
+            width: 40px;
+            height: 40px;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        a {
+            text-decoration: underline;
+        }
+    }
+
+    .card-date {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        line-height: 1;
+
+        svg {
+            flex-shrink: 0;
+        }
+    }
+
+    .card-description {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-bottom: 10px;
+    }
+
+    .card-tags {
+        --bs-link-color-rgb: var(--theme-blue-rgb);
+        --bs-link-bg-color-rgb: var(--theme-blue-light-rgb);
+        --bs-link-hover-color-rgb: var(--theme-white-rgb);
+        --bs-link-hover-bg-color-rgb: var(--theme-black-rgb);
+        display: flex;
+        flex-wrap: wrap;
+        gap: 4px;
+        margin-bottom: 20px;
+
+        a {
+            display: inline-block;
+            font-size: 14px;
+            padding: 4px 10px;
+            border-radius: var(--bs-border-radius-lg);
+            background-color: rgb(var(--bs-link-bg-color-rgb));
+
+            &:hover {
+                background-color: rgb(var(--bs-link-hover-bg-color-rgb));
+            }
+        }
+    }
+
+    .card-bottom {
+        display: flex;
+        gap: 10px;
+    }
+
+    .card-views {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        font-size: 14px;
+        line-height: 1;
+
+        svg {
+            flex-shrink: 0;
+        }
+    }
+
+    .card-read-time {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        font-size: 14px;
+        line-height: 1;
+
+        svg {
+            flex-shrink: 0;
+        }
+    }
+
+    @media (min-width: 992px) {
+        --bs-card-spacer-y: 30px;
+        --bs-card-spacer-x: 30px;
+
+        .card-media {
+            height: 280px;
+        }
+    }
+}
