--- a/src/scss/utils/_sections.scss
+++ b/src/scss/utils/_sections.scss
@@ -74,6 +74,7 @@
         .card-body {
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
         }
 
         .card-btn-wrapper {
@@ -84,10 +85,6 @@
             --bs-card-spacer-y: 40px;
             --bs-card-spacer-x: 40px;
             margin-bottom: 20px;
-
-            .card-btn-wrapper {
-                margin-top: auto;
-            }
         }
     }
 
@@ -99,34 +96,23 @@
         height: calc(100vh - 140px);
 
         .hero-grid {
-            // grid-template-columns: auto minmax(min-content, 700px);
             grid-template-columns: 1fr 1fr;
-            // grid-template-rows: 1fr 1fr auto;
-            // grid-row-gap: 20px;
-
         }
-        
-        // .hero-video-wrapper {
-        //     grid-row: 1 / 4;
-        //     grid-column: 1 / 2;
-        // }
-
-        // .card-hero-info {
-        //     grid-row: 1 / 3;
-        //     grid-column: 2 / 3;
-        // }
-
-        // .hero-swiper-wrapper {
-        //     grid-row: 3 / 4;
-        //     grid-column: 2 / 3;
-        // }
     }
 }
 
 /* section-clients-slider */
 
 .section-clients-slider {
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+
+    @media (min-width: 768px) {
+        margin-bottom: 70px;
+    }
+
+    @media (min-width: 992px) {
+        margin-bottom: 80px;
+    }
 }
 
 /* section-services-grid */
@@ -241,11 +227,19 @@
     }
 }
 
-
-
 /* section-blog-slider */
 
-// .section-blog-slider {}
+.section-blog-slider {
+    margin-bottom: 60px;
+
+    @media (min-width: 768px) {
+        margin-bottom: 70px;
+    }
+
+    @media (min-width: 992px) {
+        margin-bottom: 40px;
+    }
+}
 
 /* section-faq */
 
