--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -364,8 +364,4 @@
 </footer>
 
 <!-- scripts -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
-<script src="vendor/swiper/swiper-bundle.min.js"></script>
-<script src="vendor/fancybox/fancybox.umd.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.bundle.js"></script>
