--- a/src/scss/components/_swiper.scss
+++ b/src/scss/components/_swiper.scss
@@ -27,9 +27,9 @@
 /* swiperHeroGlassCards */
 
 .swiperHeroGlassCards {
-    --swiper-theme-color: var(--theme-white);
+    --swiper-theme-color: var(--bs-white);
     --swiper-pagination-bottom: 0;
-    --swiper-pagination-bullet-inactive-color: var(--theme-white);
+    --swiper-pagination-bullet-inactive-color: var(--bs-white);
     --swiper-pagination-bullet-inactive-opacity: 0.4;
 
     .swiper-wrapper {
