--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -102,7 +102,7 @@
         position: relative;
         overflow: hidden;
 
-        & > * {
+        > * {
             display: flex;
             align-items: center;
             justify-content: center;
