--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -67,7 +67,7 @@
         --bs-card-spacer-y: 20px;
         --bs-card-spacer-x: 15px;
         --bs-card-border-radius: var(--bs-border-radius-lg);
-        --bs-card-bg: var(--theme-white);
+        --bs-card-bg: var(--bs-white);
         flex-grow: 1;
         margin-bottom: 30px;
 
@@ -440,7 +440,7 @@
 
 .accordion-faq {
     --bs-accordion-color: var(--bs-body-color);
-    --bs-accordion-bg: var(--theme-white);
+    --bs-accordion-bg: var(--bs-white);
     --bs-accordion-btn-padding-x: 0;
     --bs-accordion-btn-padding-y: 0;
     --bs-accordion-btn-color: var(--bs-body-color);
@@ -450,7 +450,7 @@
     --bs-accordion-body-padding-x: 0;
     --bs-accordion-body-padding-y: 0;
     --bs-accordion-active-color: var(--bs-body-color);
-    --bs-accordion-active-bg: var(--theme-white);
+    --bs-accordion-active-bg: var(--bs-white);
 
     .accordion-item {
         overflow: hidden;
@@ -487,7 +487,7 @@
             justify-content: center;
             width: 50px;
             height: 50px;
-            border: 1px solid var(--theme-black);
+            border: 1px solid var(--bs-black);
             border-radius: var(--bs-border-radius);
             margin-left: auto;
     
@@ -506,9 +506,9 @@
 
 
     .accordion-content {
-        --bs-link-color-rgb: var(--theme-blue-rgb);
-        --bs-link-hover-color-rgb: var(--theme-black-rgb);
-        --bs-link-opacity: 0.6;
+        --bs-link-color-rgb: var(--bs-primary-rgb);
+        --bs-link-hover-color-rgb: var(--bs-body-color-rgb);
+        // --bs-link-opacity: 0.6;
         max-width: 820px;
         color: #6A6367;
         font-size: clamp(13px, 1vw, 18px);
