--- a/src/html/partials/card-blog.html
+++ b/src/html/partials/card-blog.html
@@ -27,7 +27,7 @@
             <div class="h4 fw-medium mb-10">
                 <a href="#">@@title</a>
             </div>
-            <div class="card-description fw-light text-muted mb-10">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
+            <div class="card-description fw-light text-gray mb-10">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
             <div class="card-tags">
                 @@if (context.tag1) {<a href="#">@@tag1</a>}
                 @@if (context.tag2) {<a href="#">@@tag2</a>}
