--- a/src/html/partials/card-review.html
+++ b/src/html/partials/card-review.html
@@ -2,14 +2,14 @@
     <div class="card-body">
         <div class="mb-30 mb-lg-40">
             <div class="h4 fw-medium mb-20">@@title</div>
-            <div class="card-description h5 fw-light text-muted mb-0">
+            <div class="card-description h5 fw-light text-gray mb-0">
                 @@description
             </div>
         </div>
         <div class="d-flex justify-content-between">
             <div>
                 <div class="h4 fw-medium mb-2">@@author</div>
-                <div class="text-muted">@@job</div>
+                <div class="text-gray">@@job</div>
             </div>
             <div>
                 <a href="#" class="btn btn-outline-black btn-l btn-animated">
