--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -103,7 +103,7 @@ body {
     gap: 10px !important;
 }
 
-@media (min-width: 992px) {
+@include media-breakpoint-up(lg) {
 
     .p-lg-20 {
         padding: 20px !important;
@@ -132,6 +132,6 @@ body {
     .container-sm,
     .container-xl,
     .container-xxl {
-        max-width: 1900px;
+        max-width: 1860px;
     }
 }
