--- a/src/html/partials/card-service.html
+++ b/src/html/partials/card-service.html
@@ -2,6 +2,6 @@
     <img class="card-bg-img" src="@@bgImgURL">
     <div class="card-body">
         <div class="h3 fw-medium mb-1">@@title</div>
-        <div class="h5 fw-light text-muted mb-0">@@subtitle</div>
+        <div class="h5 fw-light text-gray mb-0">@@subtitle</div>
     </div>
 </div>
