--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,38 +1,53 @@
-<header class="header header-fixed" id="site-header">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@@title</title>
 
-    <div class="container-fluid">
-        <div class="header-row">
+    <link rel="stylesheet" href="css/fancybox.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+</head>
+<body @@if (headerAbsolute) {class="header-absolute"}>
 
-            <!-- header-row__logo -->
-            <div class="header-row__logo">
-                <a href="index.html">
-                    <img src="img/logo.svg" alt="AMD Media">
-                </a>
-            </div>
+    <header class="header" id="site-header">
+        <div class="container-fluid">
+            <div class="header-row">
 
-            <!-- header-row__navigation -->
-            <nav class="header-row__navigation">
-                <ul class="primary-nav">
-                    <li class="nav-item">
-                        <a href="#">Проекты</a>
-                    </li>
-                    <li class="nav-item has-mega-menu">
-                        <a href="#">Услуги</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a href="#">Партнёры</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">О нас</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Блог</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#">Контакты</a>
-                    </li>
-                </ul>
-                <div class="btn-box">
+                <!-- logo -->
+                <div class="header-row__logo">
+                    <a href="index.html">
+                        <img src="img/logo.svg" alt="AMD Media">
+                    </a>
+                </div>
+
+                <!-- navigation -->
+                <nav class="header-row__navigation">
+                    <ul class="primary-nav">
+                        <li class="nav-item">
+                            <a href="#">Проекты</a>
+                        </li>
+                        <li class="nav-item has-mega-menu">
+                            <a href="#">Услуги</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="#">Партнёры</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">О нас</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">Блог</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- btn-box -->
+                <div class="header-row__btn-box">
                     <a href="tel:+74951595901" class="btn btn-outline-black btn-m btn-animated">
                         <div class="animated-content">
                             <div class="animated-content__default">
@@ -64,10 +79,9 @@
                         </div>
                     </button>
                 </div>
-            </nav>
 
-            <div class="header-row__tablet-navigation">
-                <div class="btn-box">
+                <!-- mobile-navigation -->
+                <div class="header-row__mobile-navigation">
                     <button type="button" class="btn btn-outline-black btn-m">
                         <span>Связаться</span>
                         <span>
@@ -76,19 +90,7 @@
                             </svg>
                         </span>
                     </button>
-                    <button type="button" class="btn-mobile-toggler btn btn-primary btn-icon-m">
-                        <span>
-                            <svg width="20" height="16">
-                                <use xlink:href="img/sprite.svg#icon-burger"/>
-                            </svg>
-                        </span>
-                    </button>
-                </div>
-            </div>
-
-            <div class="header-row__mobile-navigation">
-                <div class="btn-box">
-                    <button type="button" class="btn btn-outline-black btn-icon-m">
+                    <button type="button" class="btn btn-outline-black btn-icon-m d-md-none">
                         <span>
                             <svg width="30" height="30">
                                 <use xlink:href="img/sprite.svg#icon-phone"/>
@@ -103,10 +105,7 @@
                         </span>
                     </button>
                 </div>
+
             </div>
-
         </div>
-
-    </div>
-    
-</header>
+    </header>
