--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -9,6 +9,12 @@
 
     &__cta-bar {
 
+        .bg-absolute-img {
+            position: absolute;
+            top: -230px;
+            right: -40px;
+        }
+
         .cta-content {
             position: relative;
             display: grid;
@@ -38,14 +44,6 @@
                             opacity: 0.6;
                         }
                     }
-
-                    @media (min-width: 992px) {
-                        justify-content: flex-end;
-                    }
-                }
-
-                @media (min-width: 992px) {
-                    text-align: right;
                 }
             }
 
@@ -58,7 +56,6 @@
                     padding: 25px 15px;
                     border-radius: var(--bs-border-radius);
                     border: 1px solid transparent;
-                    // background: rgba(238, 244, 254, 0.05);
                     background-color: transparent;
                     background-size: cover;
                     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='120' viewBox='0 0 700 120' fill='none'%3E%3Cg filter='url(%23filter0_n_3078_16013)'%3E%3Crect width='700' height='120' fill='%23EEF4FE' fill-opacity='0.05'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_n_3078_16013' x='0' y='0' width='700' height='120' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2 2' stitchTiles='stitch' numOctaves='3' result='noise' seed='8947'/%3E%3CfeColorMatrix in='noise' type='luminanceToAlpha' result='alphaNoise'/%3E%3CfeComponentTransfer in='alphaNoise' result='coloredNoise1'%3E%3CfeFuncA type='discrete' tableValues='0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 '/%3E%3C/feComponentTransfer%3E%3CfeComposite operator='in' in2='shape' in='coloredNoise1' result='noise1Clipped'/%3E%3CfeComponentTransfer in='alphaNoise' result='coloredNoise2'%3E%3CfeFuncA type='discrete' tableValues='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 '/%3E%3C/feComponentTransfer%3E%3CfeComposite operator='in' in2='shape' in='coloredNoise2' result='noise2Clipped'/%3E%3CfeFlood flood-color='rgba(22, 29, 77, 0.1)' result='color1Flood'/%3E%3CfeComposite operator='in' in2='noise1Clipped' in='color1Flood' result='color1'/%3E%3CfeFlood flood-color='rgba(238, 244, 254, 0.1)' result='color2Flood'/%3E%3CfeComposite operator='in' in2='noise2Clipped' in='color2Flood' result='color2'/%3E%3CfeMerge result='effect1_noise_3078_16013'%3E%3CfeMergeNode in='shape'/%3E%3CfeMergeNode in='color1'/%3E%3CfeMergeNode in='color2'/%3E%3C/feMerge%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E");
@@ -83,38 +80,6 @@
                                 mask-composite: exclude;
                         pointer-events: none;
                     }
-
-                    @media (min-width: 992px) {
-                        padding: 30px;
-                    }
-                }
-            }
-            
-            @media (min-width: 992px) {
-                grid-template-columns: 1fr 1fr;
-
-                &__logo {
-                    grid-row: 1 / 3;
-                    grid-column: 1 / 2;
-                }
-    
-                &__contacts {
-                    grid-row: 1 / 4;
-                    grid-column: 2 / 3;
-                }
-    
-                &__form-title {
-                    grid-row: 3 / 4;
-                    grid-column: 1 / 2;
-
-                    .h4 br {
-                        display: none;
-                    }
-                }
-    
-                &__form {
-                    grid-row: 4 / 5;
-                    grid-column: 1 / 3;
                 }
             }
         }
@@ -138,13 +103,6 @@
         &__title {
             margin-bottom: 8px;
 
-            > *:not(.collapse-link) {
-
-                @media (max-width: 991px) {
-                    display: none;
-                }
-            }
-
             .collapse-link {
                 display: flex;
                 align-items: center;
@@ -157,17 +115,6 @@
                 &:not(.collapsed) svg {
                     transform: rotate(180deg);
                 }
-
-                @media (min-width: 992px) {
-                    display: none;
-                }
-            }
-        }
-
-        .collapse {
-
-            @media (min-width: 992px) {
-                display: block !important;
             }
         }
 
@@ -177,13 +124,77 @@
                 --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
             }
         }
+    }
 
-        @media (min-width: 992px) {
-            padding: 20px 0;
+    // Максимальная ширина
+
+    @include media-breakpoint-down(lg) {
+        .footer-widget {
+            &__title {
+                > *:not(.collapse-link) {
+                    display: none;
+                }
+            }
         }
     }
 
-    @media (min-width: 414px) {
+    // Минимальная ширина
+
+    @include media-breakpoint-up(sm) {
         gap: 20px;
+    }
+
+    @include media-breakpoint-up(lg) {
+        &__cta-bar {
+            .cta-content {
+                grid-template-columns: 1fr minmax(100px, 200px) 1fr;
+
+                &__logo {
+                    grid-row: 1 / 2;
+                    grid-column: 1 / 2;
+                }
+    
+                &__contacts {
+                    grid-row: 3 / 4;
+                    grid-column: 1 / 2;
+                }
+    
+                &__form-title {
+                    grid-row: 2 / 3;
+                    grid-column: 1 / 2;
+                }
+    
+                &__form {
+                    grid-row: 1 / 4;
+                    grid-column: 3 / 4;
+
+                    .form-wrapper {
+                        padding: 30px;
+                    }
+                }
+            }
+        }
+
+        .footer-widget {
+            padding: 20px 0;
+
+            &__title {
+                .collapse-link {
+                    display: none;
+                }
+            }
+
+            .collapse {
+                display: block !important;
+            }
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
+        &__cta-bar {
+            .cta-content {
+                grid-template-columns: 1fr 1fr 1fr;
+            }
+        }
     }
 }
