--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,7 +4,32 @@
 .header {
     position: relative;
 
-    &.header-fixed {
+    &.js-fixed {
+        top: 10px;
+
+        .header-row {
+            border-color: var(--bs-body-bg);
+        }
+    }
+}
+
+body.header-absolute {
+    .header {
+        position: absolute;
+        top: 40px;
+        left: 0;
+        right: 0;
+        z-index: 100;
+        transition: all 0.3s ease;
+
+        @include media-breakpoint-up(lg) {
+            top: 30px;
+        }
+    }
+}
+
+body.header-fixed {
+    .header {
         position: fixed;
         top: 20px;
         left: 0;
@@ -12,29 +37,13 @@
         z-index: 100;
         transition: all 0.3s ease;
     }
-
-    &.js-fixed {
-
-        .header-row {
-            border-color: var(--bs-body-bg);
-        }
-    }
-
-    &.header-fixed.js-fixed {
-        top: 10px;
-    }
-    
-    &.header-sticky {
-        position: sticky;
-        top: 0;
-    }
 }
 
 .header-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 75px;
+    height: 66px;
     padding-left: 8px;
     padding-right: 8px;
     border: 1px solid transparent;
@@ -44,12 +53,13 @@
     transition: all 0.3s ease;
 
     &__logo {
-        width: 142px;
+        height: 100%;
         max-height: 34px;
 
         img {
-            max-width: 100%;
-            height: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
     }
 
@@ -84,59 +94,73 @@
                     background-repeat: no-repeat;
                 }
 
-                & > a {
-                    line-height: 75px;
+                > a {
+                    font-size: 16px;
                 }
             }
         }
-
-        .btn-box {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 10px;
-            margin-left: 40px;
-        }
-
-        @media (max-width: 1199px) {
-            display: none;
-        }
     }
 
-    &__tablet-navigation {
-
-        .btn-box {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 4px;
-        }
-
-        @media (max-width: 767px) {
-            display: none;
-        }
-
-        @media (min-width: 1200px) {
-            display: none;
-        }
+    &__btn-box {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
     }
 
     &__mobile-navigation {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+    }
 
-        .btn-box {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 4px;
+    // Максимальная ширина
+
+    @include media-breakpoint-down(md) {
+        &__mobile-navigation {
+            .btn:not(.btn-icon-m) {
+                display: none;
+            }
+        }
+    }
+
+    @include media-breakpoint-down(xl) {
+        &__navigation {
+            display: none;
         }
 
-        @media (min-width: 768px) {
+        &__btn-box {
             display: none;
         }
     }
 
-    @media (min-width: 1200px) {
-        padding-left: 40px;
-        padding-right: 40px;
+    // Минимальная ширина
+
+    @include media-breakpoint-up(xl) {
+        height: 74px;
+        padding-left: 12px;
+        padding-right: 12px;
+
+        &__mobile-navigation {
+            display: none;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        height: 90px;
+
+        &__logo {
+            max-height: 42px;
+        }
+
+        &__navigation {
+            .primary-nav {
+                .nav-item {
+                    > a {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
     }
 }
