--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -12,8 +12,9 @@
 
 .section-home-hero {
     position: relative;
-    padding: 115px 0 20px;
+    padding-top: 105px;
     background-color: #000;
+    margin-bottom: 60px;
 
     .container-fluid {
         height: 100%;
@@ -44,61 +45,50 @@
             max-height: 100%;
             width: auto;
             height: auto;
-
-            @media (max-width: 767px) {
-                display: none;
-            }
         }
 
         .mobile-image {
-
             img {
                 max-width: 100%;
                 height: auto;
             }
-
-            @media (min-width: 768px) {
-                display: none;
-            }
-        }
-    }
-
-    .card-hero-info {
-        --bs-card-spacer-y: 20px;
-        --bs-card-spacer-x: 15px;
-        --bs-card-border-radius: var(--bs-border-radius-lg);
-        --bs-card-bg: var(--bs-white);
-        flex-grow: 1;
-        margin-bottom: 30px;
-
-        .card-body {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .card-btn-wrapper {
-            margin-top: 15px;
-        }
-
-        @media (min-width: 992px) {
-            --bs-card-spacer-y: 40px;
-            --bs-card-spacer-x: 40px;
-            margin-bottom: 20px;
         }
     }
 
     .hero-swiper-wrapper {
         min-width: 0;
+        margin-bottom: 30px;
     }
 
-    @media (min-width: 992px) {
-        height: calc(100vh - 140px);
+    @include media-breakpoint-down(md) {
+        .hero-video-wrapper {
+            .desktop-video {
+                display: none;
+            }
+        }
+    }
+
+    @include media-breakpoint-up(md) {
+        .hero-video-wrapper {
+            .mobile-image {
+                display: none;
+            }
+        }
+    }
+
+    @include media-breakpoint-up(lg) {
+        // height: calc(100vh - 140px);
+        padding-top: 150px;
+        margin-bottom: 110px;
 
         .hero-grid {
             grid-template-columns: 1fr 1fr;
         }
     }
+
+    // @include media-breakpoint-up(xxl) {
+    //     min-height: 855px;
+    // }
 }
 
 /* section-clients-slider */
@@ -106,11 +96,11 @@
 .section-clients-slider {
     margin-bottom: 50px;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
     }
 }
@@ -126,7 +116,7 @@
         gap: 15px;
     }
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
 
         .cards-grid {
@@ -135,7 +125,7 @@
         }
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
 
         .cards-grid {
@@ -144,7 +134,7 @@
         }
     }
 
-    @media (min-width: 1200px) {
+    @include media-breakpoint-up(xl) {
         .cards-grid {
             gap: 20px;
         }
@@ -162,7 +152,7 @@
         gap: 15px;
     }
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
 
         .cards-grid {
@@ -170,13 +160,19 @@
         }
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
     }
 
-    @media (min-width: 1600px) {
+    @include media-breakpoint-up(xl) {
         .cards-grid {
             grid-template-columns: 1fr 1fr;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        .cards-grid {
+            grid-template-columns: 1fr;
         }
     }
 }
@@ -211,7 +207,6 @@
                 padding: 25px 15px;
                 border-radius: var(--bs-border-radius);
                 border: 1px solid transparent;
-                // background: rgba(238, 244, 254, 0.05);
                 background-color: transparent;
                 background-size: cover;
                 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='700' height='120' viewBox='0 0 700 120' fill='none'%3E%3Cg filter='url(%23filter0_n_3078_16013)'%3E%3Crect width='700' height='120' fill='%23EEF4FE' fill-opacity='0.05'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_n_3078_16013' x='0' y='0' width='700' height='120' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2 2' stitchTiles='stitch' numOctaves='3' result='noise' seed='8947'/%3E%3CfeColorMatrix in='noise' type='luminanceToAlpha' result='alphaNoise'/%3E%3CfeComponentTransfer in='alphaNoise' result='coloredNoise1'%3E%3CfeFuncA type='discrete' tableValues='0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 '/%3E%3C/feComponentTransfer%3E%3CfeComposite operator='in' in2='shape' in='coloredNoise1' result='noise1Clipped'/%3E%3CfeComponentTransfer in='alphaNoise' result='coloredNoise2'%3E%3CfeFuncA type='discrete' tableValues='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 '/%3E%3C/feComponentTransfer%3E%3CfeComposite operator='in' in2='shape' in='coloredNoise2' result='noise2Clipped'/%3E%3CfeFlood flood-color='rgba(22, 29, 77, 0.1)' result='color1Flood'/%3E%3CfeComposite operator='in' in2='noise1Clipped' in='color1Flood' result='color1'/%3E%3CfeFlood flood-color='rgba(238, 244, 254, 0.1)' result='color2Flood'/%3E%3CfeComposite operator='in' in2='noise2Clipped' in='color2Flood' result='color2'/%3E%3CfeMerge result='effect1_noise_3078_16013'%3E%3CfeMergeNode in='shape'/%3E%3CfeMergeNode in='color1'/%3E%3CfeMergeNode in='color2'/%3E%3C/feMerge%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E");
@@ -270,7 +265,7 @@
         }
     }
 
-    @media (min-width: 576px) {
+    @include media-breakpoint-up(sm) {
 
         // .bg-absolute-img {}
 
@@ -283,15 +278,15 @@
                 }
 
                 .content-wrapper {
-                    flex-direction: row;
-                    align-items: center;
+                    // flex-direction: row;
+                    // align-items: center;
                     gap: 12px;
                 }
             }
         }
     }
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
 
         .bg-absolute-img {
@@ -301,7 +296,7 @@
         }
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
 
         .bg-absolute-img {
@@ -311,7 +306,7 @@
         }
 
         .cta-content {
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr minmax(100px, 200px) 1fr;
 
             &__heading {
                 grid-row: 1 / 3;
@@ -319,9 +314,9 @@
             }
 
             &__form {
-                grid-row: 4 / 5;
-                grid-column: 1 / 3;
-                margin-top: 60px;
+                grid-row: 1 / 4;
+                grid-column: 3 / 4;
+                margin-top: 0;
 
                 .form-wrapper {
                     padding: 30px;
@@ -333,6 +328,7 @@
                 grid-column: 1 / 2;
 
                 .content-wrapper {
+                    gap: 15px;
 
                     .h5 {
                         max-width: 430px;
@@ -340,8 +336,6 @@
                 }
 
                 .contact-socials {
-                    order: -1;
-
                     .link-social svg {
                         width: 60px;
                     }
@@ -350,32 +344,44 @@
         }
     }
 
-    @media (min-width: 1200px) {
+    @include media-breakpoint-up(xl) {
 
         .bg-absolute-img {
             top: -105px;
             left: 335px;
             width: 1100px;
         }
+
+        .cta-content {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
     }
 
-    @media (min-width: 1400px) {
+    @include media-breakpoint-up(xxl) {
 
         .bg-absolute-img {
             top: -140px;
             left: 405px;
             width: 1200px;
         }
-    }
 
-    @media (min-width: 1600px) {
-
-        .bg-absolute-img {
-            top: -175px;
-            left: 315px;
-            width: 1600px;
+        .cta-content {
+            &__socials {
+                .content-wrapper {
+                    gap: 20px;
+                }
+            }
         }
     }
+
+    // @include media-breakpoint-up(xxl) {
+
+    //     .bg-absolute-img {
+    //         top: -175px;
+    //         left: 315px;
+    //         width: 1600px;
+    //     }
+    // }
 }
 
 /* section-tariffs */
@@ -387,11 +393,11 @@
 .section-partners-slider {
     margin-bottom: 50px;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
     }
 }
@@ -401,11 +407,11 @@
 .section-reviews-slider {
     margin-bottom: 50px;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
     }
 }
@@ -415,11 +421,11 @@
 .section-blog-slider {
     margin-bottom: 60px;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 40px;
     }
 }
@@ -429,11 +435,11 @@
 .section-faq {
     margin-bottom: 50px;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @media (min-width: 992px) {
+    @include media-breakpoint-up(lg) {
         margin-bottom: 80px;
     }
 }
@@ -462,7 +468,7 @@
             margin-bottom: 10px;
         }
 
-        @media (min-width: 992px) {
+        @include media-breakpoint-up(lg) {
             padding: 30px 40px;
         }
     }
@@ -482,13 +488,6 @@
 
         .accordion-icon {
             flex-shrink: 0;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 50px;
-            height: 50px;
-            border: 1px solid var(--bs-black);
-            border-radius: var(--bs-border-radius);
             margin-left: auto;
     
             svg {
@@ -506,13 +505,7 @@
 
 
     .accordion-content {
-        --bs-link-color-rgb: var(--bs-primary-rgb);
-        --bs-link-hover-color-rgb: var(--bs-body-color-rgb);
-        // --bs-link-opacity: 0.6;
         max-width: 820px;
-        color: #6A6367;
-        font-size: clamp(13px, 1vw, 18px);
-        font-weight: 300;
 
         a {
             text-decoration: underline;
