--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -52,6 +52,34 @@ h6,
 
 // Font Size
 
+.fs-36-58 {
+    font-size: clamp(36px, 4vw, 58px) !important;
+}
+
+.fs-28-52 {
+    font-size: clamp(28px, 3.2vw, 52px) !important;
+}
+
+.fs-22-36 {
+    font-size: clamp(22px, 2.2vw, 36px) !important;
+}
+
+.fs-18-30 {
+    font-size: clamp(18px, 1.8vw, 30px) !important;
+}
+
+.fs-16-22 {
+    font-size: clamp(16px, 1.2vw, 22px) !important;
+}
+
+.fs-16-20 {
+    font-size: clamp(16px, 1.2vw, 20px) !important;
+}
+
+.fs-13-22 {
+    font-size: clamp(13px, 1.2vw, 22px) !important;
+}
+
 .fs-22 {
     font-size: 22px !important;
 }
@@ -66,6 +94,22 @@ h6,
 
 .fs-14 {
     font-size: 14px !important;
+}
+
+.text-white-blue {
+    color: #EAF1FF !important;
+}
+
+.text-gray {
+    color: #6A6367 !important;
+}
+
+.text-dark-blue {
+    color: #5A6169 !important;
+}
+
+.text-dark-green {
+    color: #006311 !important;
 }
 
 // Paragraph
