--- a/src/html/partials/card-glass.html
+++ b/src/html/partials/card-glass.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <!-- img -->
         <div class="card-media">
-            <img class="img-fluid" src="@@imgIconURL">
+            <img src="@@imgIconURL">
         </div>
         <!-- text -->
         <div class="card-info">
