--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -83,12 +83,10 @@
                 <!-- mobile-navigation -->
                 <div class="header-row__mobile-navigation">
                     <button type="button" class="btn btn-outline-black btn-m">
-                        <span>Связаться</span>
-                        <span>
-                            <svg width="14" height="14">
-                                <use xlink:href="img/sprite.svg#btn-arrow-up"/>
-                            </svg>
-                        </span>
+                        <span class="fs-14">Связаться</span>
+                        <svg width="10" height="10">
+                            <use xlink:href="img/sprite.svg#btn-arrow-up"/>
+                        </svg>
                     </button>
                     <button type="button" class="btn btn-outline-black btn-icon-m d-md-none">
                         <span>
