--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -16,13 +16,17 @@
 body.header-absolute {
     .header {
         position: absolute;
-        top: 40px;
+        top: 15px;
         left: 0;
         right: 0;
         z-index: 100;
         transition: all 0.3s ease;
 
         @include media-breakpoint-up(lg) {
+            top: 20px;
+        }
+
+        @include media-breakpoint-up(xxl) {
             top: 30px;
         }
     }
@@ -44,7 +48,7 @@ body.header-fixed {
     align-items: center;
     justify-content: space-between;
     height: 66px;
-    padding-left: 8px;
+    padding-left: 15px;
     padding-right: 8px;
     border: 1px solid transparent;
     border-radius: 20px;
@@ -138,7 +142,7 @@ body.header-fixed {
 
     @include media-breakpoint-up(xl) {
         height: 74px;
-        padding-left: 12px;
+        padding-left: 20px;
         padding-right: 12px;
 
         &__mobile-navigation {
@@ -148,6 +152,8 @@ body.header-fixed {
 
     @include media-breakpoint-up(xxl) {
         height: 90px;
+        padding-left: 24px;
+        padding-right: 12px;
 
         &__logo {
             max-height: 42px;
