--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -58,7 +58,8 @@ body.header-fixed {
 
     &__logo {
         height: 100%;
-        max-height: 34px;
+        max-width: 142px;
+        max-height: 42px;
 
         img {
             width: 100%;
@@ -156,7 +157,7 @@ body.header-fixed {
         padding-right: 12px;
 
         &__logo {
-            max-height: 42px;
+            max-width: 175px;
         }
 
         &__navigation {
