--- a/src/html/partials/card-hero-info.html
+++ b/src/html/partials/card-hero-info.html
@@ -24,7 +24,7 @@
                         <circle cx="18" cy="34" r="2" fill="#F74251"/>
                     </svg>
                 </span>
-                <div class="hero-subtitle h5 fw-light text-gray mb-0">От шаблона до сложных экосистем.<br> Быстрый старт за 14 дней с возможностью масштабирования</div>
+                <div class="hero-subtitle h5 fw-light text-gray mb-0">От&nbsp;шаблона до&nbsp;сложных экосистем.<br> Быстрый старт за&nbsp;14&nbsp;дней с&nbsp;возможностью масштабирования</div>
             </div>
         </div>
         <div class="card-btn-wrapper">
