--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -20,7 +20,7 @@
 }
 
 .btn-m {
-    --bs-btn-padding-x: 24px;
+    --bs-btn-padding-x: 16px;
     --bs-btn-padding-y: 0;
     min-height: 50px;
 }
@@ -33,7 +33,7 @@
 }
 
 .btn-l {
-    --bs-btn-padding-x: 32px;
+    --bs-btn-padding-x: 20px;
     --bs-btn-padding-y: 0;
     min-height: 58px;
 }
@@ -131,6 +131,16 @@
                 transform: translateY(0%);
             }
         }
+    }
+}
+
+@include media-breakpoint-up(lg) {
+    .btn-m {
+        --bs-btn-padding-x: 24px;
+    }
+
+    .btn-l {
+        --bs-btn-padding-x: 32px;
     }
 }
 
